<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.TaskMakerActivity">

    <TextView
            android:text="@string/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_label"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/task_title"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/task_title"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title_label"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/decription_label"/>
    <TextView
            android:text="@string/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/decription_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/task_description" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/task_title"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/task_description" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/decription_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/deadline_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deadline_label" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/task_description" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/task_deadline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/deadline_label" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/priority_label"/>
    <TextView
            android:text="@string/priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priority_label" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/task_deadline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/priority_bar"/>
    <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priority_bar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/priority_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:progress="0"
            android:max="8"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_task_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/priority_bar"/>
</android.support.constraint.ConstraintLayout>